hadoop本地测试可用

--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     </parent>
     <modules>
         <module>netdisk-common</module>
-<!--        <module>cloud-hadoop</module>-->
+        <module>cloud-hadoop</module>
 
     </modules>
 
