--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>netdisk-common</module>
         <module>cloud-hadoop</module>
+        <module>netdisk-gateway</module>
 
     </modules>
 
@@ -34,24 +35,21 @@
     </properties>
 
 
-
-
     <dependencyManagement>
 
 
-
         <dependencies>
-<!--            <dependency>-->
-<!--                <groupId>org.springframework.boot</groupId>-->
-<!--                <artifactId>spring-boot-starter</artifactId>-->
-<!--                <version>2.1.5.RELEASE</version>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.springframework.boot</groupId>-->
+            <!--                <artifactId>spring-boot-starter</artifactId>-->
+            <!--                <version>2.1.5.RELEASE</version>-->
+            <!--            </dependency>-->
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>2.1.5.RELEASE</version>
-<!--                <scope>compile</scope>-->
+                <!--                <scope>compile</scope>-->
             </dependency>
 
             <dependency>
@@ -60,11 +58,11 @@
                 <version>${gson.version}</version>
             </dependency>
 
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-devtools</artifactId>
-                <version>${devtools.version}</version>
-            </dependency>
+            <!--            <dependency>-->
+            <!--                <groupId>org.springframework.boot</groupId>-->
+            <!--                <artifactId>spring-boot-devtools</artifactId>-->
+            <!--                <version>2.5.2</version>-->
+            <!--            </dependency>-->
 
 
             <dependency>
@@ -92,7 +90,7 @@
             </dependency>
 
 
-<!--            日志门面-->
+            <!--            日志门面-->
 
             <dependency>
                 <groupId>ch.qos.logback</groupId>
@@ -100,6 +98,73 @@
                 <version>1.2.11</version>
             </dependency>
 
+
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>5.8.5</version>
+            </dependency>
+
+
+            <!--swagger的依赖-->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>2.9.2</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+                <version>2.9.2</version>
+            </dependency>
+            <!--swaggerUI增强 knife4j的依赖-->
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-spring-boot-starter</artifactId>
+                <version>2.0.9</version>
+            </dependency>
+
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-gateway</artifactId>
+                <version>2.1.1.RELEASE</version>
+            </dependency>
+
+
+            <!-- 配置中心 -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+                <version>0.9.0.RELEASE</version>
+            </dependency>
+
+            <!-- 注册中心 -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+                <version>0.9.0.RELEASE</version>
+            </dependency>
+
+
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>0.9.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>2.3.1</version><!--$NO-MVN-MAN-VER$-->
+            </dependency>
+
+            <!--            spring-boot-starter-validation-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-validation</artifactId>
+                <version>2.6.4</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
