--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <gson.version>2.8.5</gson.version>
+        <gson.version>2.8.9</gson.version>
         <devtools.version>2.7.3</devtools.version>
 
         <mybatis.version>3.5.2</mybatis.version>
@@ -71,7 +71,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
-                <version>2.1.5.RELEASE</version>
+                <version>2.5.12</version>
                 <!--                <scope>compile</scope>-->
             </dependency>
 
