--- a/cloud-hadoop/src/main/resources/bootstrap.yaml
+++ b/cloud-hadoop/src/main/resources/bootstrap.yaml
@@ -2,7 +2,10 @@ server:
   port: 8081
   servlet:
     context-path: /hdfs
+
 spring:
+  profiles:
+    active: dev
   # 服务逻辑名称
   application:
     name: cloud-netdisk-hadoop
@@ -10,11 +13,15 @@ spring:
     nacos:
       # 配置中心
       config:
-        server-addr: 192.168.10.14:8848
+        server-addr: 127.0.0.1:8849
         file-extension: yaml
         namespace: 02179d64-6944-44c9-afc3-e3677bc0f6a2
         enabled: true
+        username: ${spring.cloud.nacos.discovery.username}
+        password: ${spring.cloud.nacos.discovery.password}
       # 注册中心
       discovery:
-        server-addr: 192.168.10.14:8848
+        server-addr: 127.0.0.1:8849
         namespace: 02179d64-6944-44c9-afc3-e3677bc0f6a2
+        username: nacos
+        password: xxxxxx
