--- a/netdisk-feign/netdisk-hdfs-feign-client/pom.xml
+++ b/netdisk-feign/netdisk-hdfs-feign-client/pom.xml
@@ -8,6 +8,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>netdisk-hdfs-feign-client</artifactId>
@@ -36,5 +37,9 @@
 <!--            <artifactId>netdisk-feign</artifactId>-->
 <!--            <version>1.0-SNAPSHOT</version>-->
 <!--        </dependency>-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+        </dependency>
     </dependencies>
 </project>
