--- a/netdisk-common/pom.xml
+++ b/netdisk-common/pom.xml
@@ -7,8 +7,6 @@
         <groupId>com.yefeng</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-<!--    <modelVersion/>-->
-<!--    <version>1.0-SNAPSHOT</version>-->
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>netdisk-common</artifactId>
@@ -86,7 +84,7 @@
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
-            <optional>true</optional>
+<!--            <optional>true</optional>-->
         </dependency>
 
 
