--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
         <module>netdisk-gateway</module>
         <module>netdisk-front</module>
         <module>netdisk-feign</module>
-<!--        <module>netdisk-feign/netdisk-front-feign-client</module>-->
-<!--        <module>netdisk-feign/netdisk-hdfs-feign-client</module>-->
+        <!--        <module>netdisk-feign/netdisk-front-feign-client</module>-->
+        <!--        <module>netdisk-feign/netdisk-hdfs-feign-client</module>-->
 
     </modules>
 
@@ -36,6 +36,7 @@
         <devtools.version>2.7.3</devtools.version>
 
         <mybatis.version>3.5.2</mybatis.version>
+        <nacos.version>2.1.4.RELEASE</nacos.version>
     </properties>
 
 
@@ -45,10 +46,12 @@
         <dependencies>
             <dependency>
 
-                    <groupId>org.springframework.cloud</groupId>
-                    <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
 
                 <version>2.1.5.RELEASE</version>
+
+
             </dependency>
 
             <!--            <dependency>-->
@@ -57,10 +60,10 @@
             <!--                <version>2.1.5.RELEASE</version>-->
             <!--            </dependency>-->
 
-<!--            <dependency>-->
-<!--                <groupId>org.springframework.cloud</groupId>-->
-<!--                <artifactId>spring-cloud-starter-openfeign</artifactId>-->
-<!--            </dependency>-->
+            <!--            <dependency>-->
+            <!--                <groupId>org.springframework.cloud</groupId>-->
+            <!--                <artifactId>spring-cloud-starter-openfeign</artifactId>-->
+            <!--            </dependency>-->
 
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
@@ -154,20 +157,33 @@
                 <version>2.1.1.RELEASE</version>
             </dependency>
 
-
-            <!-- 配置中心 -->
             <dependency>
-                <groupId>org.springframework.cloud</groupId>
+                <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
-                <version>0.9.0.RELEASE</version>
+                <version>${nacos.version}</version>
             </dependency>
-
-            <!-- 注册中心 -->
             <dependency>
-                <groupId>org.springframework.cloud</groupId>
+                <groupId>com.alibaba.cloud</groupId>
                 <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-                <version>0.9.0.RELEASE</version>
+                <version>${nacos.version}</version>
             </dependency>
+            <!-- 配置中心 -->
+
+
+<!--            <dependency>-->
+<!--                <groupId>org.springframework.cloud</groupId>-->
+<!--                <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>-->
+<!--                <version>0.9.0.RELEASE</version>-->
+<!--            </dependency>-->
+
+
+<!--            &lt;!&ndash; 注册中心 &ndash;&gt;-->
+<!--            <dependency>-->
+<!--                <groupId>org.springframework.cloud</groupId>-->
+<!--                <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>-->
+<!--                <version>0.9.0.RELEASE</version>-->
+<!--            </dependency>-->
+
 
 
             <dependency>
@@ -188,7 +204,6 @@
                 <artifactId>spring-boot-starter-validation</artifactId>
                 <version>2.6.4</version>
             </dependency>
-
         </dependencies>
     </dependencyManagement>
 
