--- a/netdisk-front/src/main/resources/application-dev.yaml
+++ b/netdisk-front/src/main/resources/application-dev.yaml
@@ -1,6 +1,7 @@
 server:
   port: 8082
-
+  servlet:
+    context-path: /front
 mycloud:
   register:
     registerByMobileLogin: true #未注册手机 通过登录直接注册
