--- a/pom.xml
+++ b/pom.xml
@@ -45,13 +45,15 @@
 
         <dependencies>
             <dependency>
-
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
-
                 <version>2.1.5.RELEASE</version>
+            </dependency>
 
-
+            <dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper-spring-boot-starter</artifactId>
+                <version>1.2.13</version>
             </dependency>
 
             <!--            <dependency>-->
