fate 添加验证码发送,使用服务定位模式,完成邮箱验证

--- a/netdisk-common/pom.xml
+++ b/netdisk-common/pom.xml
@@ -102,7 +102,11 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
 
+        </dependency>
 
     </dependencies>
 
