--- a/netdisk-common/pom.xml
+++ b/netdisk-common/pom.xml
@@ -23,7 +23,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>dysmsapi20170525</artifactId>
+            <version>2.0.23</version>
+<!--            <optional>true</optional>-->
+        </dependency>
 
 
         <dependency>
