--- a/netdisk-front/src/main/resources/bootstrap.yaml
+++ b/netdisk-front/src/main/resources/bootstrap.yaml
@@ -1,14 +1,31 @@
 
 spring:
   profiles:
-    active: dev
+    active: local
 
 ---
 server:
   port: 8082
 spring:
   profiles: local
-
+  application:
+    name: netdisk-cloud-front
+  cloud:
+    nacos:
+      # 配置中心
+      config:
+        server-addr: 127.0.0.1:8849
+        file-extension: yaml
+        namespace: 02179d64-6944-44c9-afc3-e3677bc0f6a2
+        enabled: true
+        username: ${spring.cloud.nacos.discovery.username}
+        password: ${spring.cloud.nacos.discovery.password}
+      # 注册中心
+      discovery:
+        server-addr: 127.0.0.1:8849
+        namespace: 02179d64-6944-44c9-afc3-e3677bc0f6a2
+        username: nacos
+        password: xxxxxx
 
 ---
 server:
