--- a/netdisk-front/pom.xml
+++ b/netdisk-front/pom.xml
@@ -171,6 +171,18 @@
             <scope>provided</scope>
         </dependency>
 
+
+<!--        <dependency>-->
+<!--            <groupId>me.zhyd.oauth</groupId>-->
+<!--            <artifactId>JustAuth</artifactId>-->
+
+<!--        </dependency>-->
+        <dependency>
+            <groupId>com.xkcoding.justauth</groupId>
+            <artifactId>justauth-spring-boot-starter</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
