--- a/netdisk-front/src/main/resources/application.yaml
+++ b/netdisk-front/src/main/resources/application.yaml
@@ -59,8 +59,9 @@ justauth:
   enabled: true
   type:
     GITHUB:
-      client-id: xxxxxx
-      client-secret: xxxxxx
-      redirect-uri: http://192.168.196.80:8082/front/oauth/github/callback
-  cache:
-    type: default
+#      client-id: xxxxxx
+#      client-secret: xxxxxx
+      client-id: 4b8985aeb5441b4ce940
+      client-secret: xxxx
+      redirect-uri: http://localhost:8082/front/oauth/github/callback
+
