fate:封装list时期支持total和list,修复了一下问题

--- a/netdisk-front/src/main/resources/application-local.yaml
+++ b/netdisk-front/src/main/resources/application-local.yaml
@@ -30,7 +30,7 @@ spring:
     #    url: jdbc:mysql://localhost:3306/netdisk?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
     url: jdbc:mysql://127.0.0.1:3306/netdisk?serverTimezone=UTC
 #    url: jdbc:mysql://146.56.96.241:3306/netdisk?serverTimezone=UTC  #24g
-#    username: root
+    username: root
     password: xxxx
 #    password: xxxxxx
     # 指定类型为我们自己的
