--- a/netdisk-front/src/main/resources/application-dev.yaml
+++ b/netdisk-front/src/main/resources/application-dev.yaml
@@ -97,3 +97,17 @@ feign:
       hdfsUpload:
         connectTimeout: 100000
         readTimeout: 100000
+justauth:
+  enabled: true
+  type:
+    GITHUB:
+      client-id: xxxxxx
+      client-secret: xxxxxx
+      redirect-uri: http://127.0.01:8082/front/oauth/github/callback
+  cache:
+    type: default
+
+webclient:
+  hostname: 127.0.0.1
+  port: 8082
+  url: http://127.0.0.1:3080
