--- a/pom.xml
+++ b/pom.xml
@@ -45,10 +45,7 @@
 
 
         <dependencies>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-validation</artifactId>
-            </dependency>
+
 
             <dependency>
                 <groupId>com.sun.mail</groupId>
@@ -56,11 +53,11 @@
                 <version>1.5.5</version>
             </dependency>
 
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
-                <version>2.1.5.RELEASE</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>org.springframework.cloud</groupId>-->
+<!--                <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>-->
+<!--                <version>2.1.5.RELEASE</version>-->
+<!--            </dependency>-->
 
             <dependency>
                 <groupId>com.github.pagehelper</groupId>
@@ -142,7 +139,7 @@
             <dependency>
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
-                <version>5.8.5</version>
+                <version>5.8.15</version>
             </dependency>
 
 
