fate: add fileStorage

--- a/netdisk-feign/pom.xml
+++ b/netdisk-feign/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>netdisk-hdfs-feign-client</module>
         <module>netdisk-front-feign-client</module>
+        <module>netdisk-filestroage-feign-client</module>
     </modules>
 
 
