--- a/netdisk-front/src/main/resources/application.yaml
+++ b/netdisk-front/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ server:
     context-path: /front
 spring:
   profiles:
-    active: dev
+    active: local
   jackson:
     serialization:
       fail-on-empty-beans: false
@@ -43,7 +43,7 @@ mycloud:
       queueCapacity: 20480
   upload:
     idSize: 32
-    tokenExpire: 600 #600 sec  is 10 minutes
+    tokenExpire: 72000 #600 sec  is 10 minutes
   download:
     urlExpireTime: 3600 #downloadUrltoken失效时间 默认10分钟600秒
   useractive:
