--- a/netdisk-front/src/main/resources/application-local.yaml
+++ b/netdisk-front/src/main/resources/application-local.yaml
@@ -32,7 +32,7 @@ spring:
 #    url: jdbc:mysql://146.56.96.241:3306/netdisk?serverTimezone=UTC  #24g
     username: root
     password: xxxx
-#    password: xxxxxx
+#    password: xxxxx
     # 指定类型为我们自己的
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
@@ -72,9 +72,9 @@ spring:
   #    connect-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
   redis:
     database: 0
-    host: 127.0.0.1
+    host: 146.56.116.51
     port: 6379
-    password: xxxxxxx
+    password: xxxx
 feign:
   okhttp:
     enabled: true
@@ -101,10 +101,10 @@ justauth:
   enabled: true
   type:
     GITHUB:
-      #      client-id: xxxxxx
-      #      client-secret: xxxxxx
+      #      client-id: a4bad19c0484ac324762
+      #      client-secret: fa016f426e037f944549b86a13576a0ed036f555
       client-id: 4b8985aeb5441b4ce940
-      client-secret: xxxx
+      client-secret: f2759b3fe59c8f6f09fb493595bf6d4b12168e4e
       redirect-uri: http://192.168.196.80:8082/front/oauth/github/callback
   http-config:
     timeout: 30000
@@ -116,4 +116,4 @@ justauth:
 webclient:
   hostname: 192.168.196.80
   port: 8082
-  url: http://localhost:8082/front
+  url: http://localhost:5173/#/
