--- a/netdisk-front/src/main/resources/application-dev.yaml
+++ b/netdisk-front/src/main/resources/application-dev.yaml
@@ -32,7 +32,7 @@ spring:
     url: jdbc:mysql://146.56.96.241:3306/netdisk?serverTimezone=UTC  #24g
     username: root
     #    password: xxxx
-    password: xxxxx
+    password: xxxxxx
     # 指定类型为我们自己的
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
@@ -73,9 +73,9 @@ spring:
   #    connect-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
   redis:
     database: 0
-    host: 146.56.116.51
+    host: 127.0.0.1
     port: 6379
-    password: xxxx
+    password: xxxxxxx
 feign:
   okhttp:
     enabled: true
@@ -102,9 +102,9 @@ justauth:
   enabled: true
   type:
     GITHUB:
-      client-id: a4bad19c0484ac324762
-      client-secret: fa016f426e037f944549b86a13576a0ed036f555
-      redirect-uri: http://127.0.0.1:8082/front/oauth/github/callback
+      client-id: xxxxxx
+      client-secret: xxxxxx
+      redirect-uri: http://127.0.01:8082/front/oauth/github/callback
   cache:
     type: default
 
